[tool.poetry]
name = "chromadb-deterministic-bug"
version = "0.1.0"
description = ""
authors = ["Anthony Naddeo <anthony.naddeo@gmail.com"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
chromadb = "^0.5.5"
sentence-transformers = "^3.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
